# Matrice-100

catkin_ws/: copy_to_drone.sh
catkin_ws/bag/: edulab_laser_3.bag  edulab_no_map_3.bag  imu.bag  imu2.bag  laser.bag  sweep_node.bag
catkin_ws/devel/: _setup_util.py
catkin_ws/devel/include/dji_sdk/: ActivationRequest.h  ActivationResponse.h  CameraActionRequest.h  CameraActionResponse.h  DroneArmControlRequest.h  DroneArmControlResponse.h  DroneTaskControlRequest.h  DroneTaskControlResponse.h  Gimbal.h  MFIOConfigRequest.h  MFIOConfigResponse.h  MFIOSetValueRequest.h  MFIOSetValueResponse.h  MissionHotpointTask.h  MissionHpActionRequest.h  MissionHpActionResponse.h  MissionHpGetInfoRequest.h  MissionHpGetInfoResponse.h  MissionHpResetYawRequest.h  MissionHpResetYawResponse.h  MissionHpUpdateRadiusRequest.h  MissionHpUpdateRadiusResponse.h  MissionHpUpdateYawRateRequest.h  MissionHpUpdateYawRateResponse.h  MissionHpUploadRequest.h  MissionHpUploadResponse.h  MissionStatusRequest.h  MissionStatusResponse.h  MissionWaypoint.h  MissionWaypointAction.h  MissionWaypointTask.h  MissionWpActionRequest.h  MissionWpActionResponse.h  MissionWpGetInfoRequest.h  (+20 more)
catkin_ws/map/: mymap.pgm  mymap.yaml
catkin_ws/src/drone_sim/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/imu_reader/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/imu_reader/src/: imu_reader_node.cpp  imu_reader_node.cpp~
catkin_ws/src/mapper/: CMakeLists.txt  package.xml
catkin_ws/src/mapper/launch/: mapper.launch
catkin_ws/src/mapper/src/: mapper_node.cpp
(+110 files in other folders)
